--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,14 @@
 site_name: Nate's CTF Writeups
 
 theme:
-    name: 'material'
+    name: 'readthedocs'
     palette:
 
     # Light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
+      primary: black
+      accent: cyan
       toggle:
         icon: material/toggle-switch-off-outline
         name: Switch to dark mode
@@ -14,6 +16,8 @@ theme:
     # Dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
+      primary: cyan
+      accent: light green
       toggle:
         icon: material/toggle-switch
         name: Switch to light mode
