--- a/docs/HackTheBox/.obsidian/workspace
+++ b/docs/HackTheBox/.obsidian/workspace
@@ -10,7 +10,7 @@
           "type": "markdown",
           "state": {
             "file": "brainfck.md",
-            "mode": "preview"
+            "mode": "source"
           }
         }
       }
