Added Granny, got webuser

--- a/docs/HackTheBox/.obsidian/workspace
+++ b/docs/HackTheBox/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "brainfck.md",
+            "file": "Granny.md",
             "mode": "source"
           }
         }
@@ -39,7 +39,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "msfvenom",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -48,7 +48,8 @@
               }
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
@@ -68,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "brainfck.md",
+                "file": "Granny.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,13 +89,14 @@
   },
   "active": "8d015ee96f75e4d2",
   "lastOpenFiles": [
-    "brainfck.md",
-    "2019d3282e5a4b13a2c92f0de23f7ef0.png",
-    "WIP-Beep.md",
-    "WIP-Bastard.md",
-    "Shocker.md",
-    "Nibbles.md",
+    "Granny.md",
+    "Beep.md",
+    "Brainfuck.md",
+    "Bastard.md",
+    "Lame.md",
     "Legacy.md",
-    "Lame.md"
+    "Nibbles.md",
+    "Shocker.md",
+    "2019d3282e5a4b13a2c92f0de23f7ef0.png"
   ]
 }
