Lessons learned for shocker

--- a/docs/HackTheBox/.obsidian/workspace
+++ b/docs/HackTheBox/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Nibbles.md",
+            "file": "Shocker.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Nibbles.md",
+                "file": "Shocker.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,6 +88,7 @@
   },
   "active": "5bdf4c4204ff5a31",
   "lastOpenFiles": [
+    "Shocker.md",
     "Nibbles.md",
     "Legacy.md",
     "Lame.md",
@@ -95,7 +96,6 @@
     "Brainfuck.md",
     "Beep.md",
     "Bastard.md",
-    "Shocker.md",
     "2019d3282e5a4b13a2c92f0de23f7ef0.png"
   ]
 }
