--- a/docs/HackTheBox/.obsidian/workspace
+++ b/docs/HackTheBox/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Shocker.md",
+            "file": "Granny.md",
             "mode": "source"
           }
         }
@@ -52,7 +52,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
   "right": {
     "id": "e0272d310a0a000a",
@@ -68,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Shocker.md",
+                "file": "Granny.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,14 +89,14 @@
   },
   "active": "5bdf4c4204ff5a31",
   "lastOpenFiles": [
+    "Granny.md",
+    "Lame.md",
+    "Beep.md",
+    "Brainfuck.md",
+    "Bastard.md",
     "Shocker.md",
     "Nibbles.md",
     "Legacy.md",
-    "Lame.md",
-    "Granny.md",
-    "Brainfuck.md",
-    "Beep.md",
-    "Bastard.md",
     "2019d3282e5a4b13a2c92f0de23f7ef0.png"
   ]
 }
