--- a/docs/.obsidian/workspace
+++ b/docs/.obsidian/workspace
@@ -1,16 +1,16 @@
 {
   "main": {
-    "id": "97bfe9ffc0c0a5e1",
+    "id": "ea292c69ab8e406a",
     "type": "split",
     "children": [
       {
-        "id": "5bdf4c4204ff5a31",
+        "id": "72dd90a55b49cb5e",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Granny.md",
-            "mode": "preview"
+            "file": "index.md",
+            "mode": "source"
           }
         }
       }
@@ -18,15 +18,15 @@
     "direction": "vertical"
   },
   "left": {
-    "id": "e1f56175b467a425",
+    "id": "519377bead1894e4",
     "type": "split",
     "children": [
       {
-        "id": "3db7d6cbba24066f",
+        "id": "6dc01f6424c59c41",
         "type": "tabs",
         "children": [
           {
-            "id": "889051a61bbec7ac",
+            "id": "7ac4632d0d6c2756",
             "type": "leaf",
             "state": {
               "type": "file-explorer",
@@ -34,7 +34,7 @@
             }
           },
           {
-            "id": "1cae23c8da56d8e7",
+            "id": "cf5a1afedb1ae007",
             "type": "leaf",
             "state": {
               "type": "search",
@@ -55,20 +55,20 @@
     "width": 300
   },
   "right": {
-    "id": "e0272d310a0a000a",
+    "id": "3672d763468503ca",
     "type": "split",
     "children": [
       {
-        "id": "6d3d0b89c1e677ad",
+        "id": "2f52dda5c573f103",
         "type": "tabs",
         "children": [
           {
-            "id": "9ee07f7fb5542516",
+            "id": "e424e553d479dc0a",
             "type": "leaf",
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Granny.md",
+                "file": "index.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,16 +86,8 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "5bdf4c4204ff5a31",
+  "active": "72dd90a55b49cb5e",
   "lastOpenFiles": [
-    "Granny.md",
-    "Bastard.md",
-    "Beep.md",
-    "Brainfuck.md",
-    "Lame.md",
-    "Shocker.md",
-    "Nibbles.md",
-    "Legacy.md",
-    "2019d3282e5a4b13a2c92f0de23f7ef0.png"
+    "index.md"
   ]
 }
