Move incomplete writeups to folder

--- a/docs/HackTheBox/.obsidian/workspace
+++ b/docs/HackTheBox/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Nineveh.md",
+            "file": "Shocker.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Nineveh.md",
+                "file": "Shocker.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "5bdf4c4204ff5a31",
   "lastOpenFiles": [
-    "Nineveh.md",
-    "Beep.md",
-    "Breadcrumbs.md",
-    "Granny.md",
-    "Lame.md",
-    "ScriptKiddie.md",
-    "Bastard.md",
-    "Brainfuck.md",
     "Shocker.md",
-    "Nibbles.md"
+    "In Progress/ScriptKiddie.md",
+    "In Progress/Nineveh.md",
+    "Nibbles.md",
+    "Legacy.md",
+    "Lame.md",
+    "In Progress/Breadcrumbs.md",
+    "In Progress/Brainfuck.md",
+    "In Progress/Beep.md",
+    "In Progress/Bastard.md"
   ]
 }
