--- a/docs/HackTheBox/.obsidian/workspace
+++ b/docs/HackTheBox/.obsidian/workspace
@@ -89,14 +89,14 @@
   "active": "5bdf4c4204ff5a31",
   "lastOpenFiles": [
     "Shocker.md",
-    "In Progress/ScriptKiddie.md",
-    "In Progress/Nineveh.md",
     "Nibbles.md",
     "Legacy.md",
     "Lame.md",
+    "In Progress/ScriptKiddie.md",
+    "In Progress/Nineveh.md",
+    "In Progress/Granny.md",
     "In Progress/Breadcrumbs.md",
     "In Progress/Brainfuck.md",
-    "In Progress/Beep.md",
-    "In Progress/Bastard.md"
+    "In Progress/Beep.md"
   ]
 }
