--- a/docs/HackTheBox/.obsidian/workspace
+++ b/docs/HackTheBox/.obsidian/workspace
@@ -9,10 +9,23 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Shocker.md",
+            "file": "In Progress/Arctic.md",
             "mode": "source"
           }
-        }
+        },
+        "group": "36baeb70c03dd5f9"
+      },
+      {
+        "id": "aa0e8e0ef7e3b865",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "In Progress/Arctic.md",
+            "mode": "preview"
+          }
+        },
+        "group": "36baeb70c03dd5f9"
       }
     ],
     "direction": "vertical"
@@ -68,7 +81,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Shocker.md",
+                "file": "In Progress/Arctic.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +101,15 @@
   },
   "active": "5bdf4c4204ff5a31",
   "lastOpenFiles": [
+    "In Progress/Arctic.md",
+    "In Progress/Bastard.md",
+    "In Progress/Breadcrumbs.md",
+    "In Progress/Nineveh.md",
+    "In Progress/Granny.md",
     "Shocker.md",
     "Nibbles.md",
     "Legacy.md",
     "Lame.md",
-    "In Progress/ScriptKiddie.md",
-    "In Progress/Nineveh.md",
-    "In Progress/Granny.md",
-    "In Progress/Breadcrumbs.md",
-    "In Progress/Brainfuck.md",
-    "In Progress/Beep.md"
+    "In Progress/ScriptKiddie.md"
   ]
 }
