--- a/docs/TryHackMe/.obsidian/workspace
+++ b/docs/TryHackMe/.obsidian/workspace
@@ -1,15 +1,15 @@
 {
   "main": {
-    "id": "97bfe9ffc0c0a5e1",
+    "id": "4b553e87574bacbb",
     "type": "split",
     "children": [
       {
-        "id": "aa0e8e0ef7e3b865",
+        "id": "9249eac710ee11dd",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "In Progress/Relevant.md",
+            "file": "relevant.md",
             "mode": "source"
           }
         }
@@ -18,15 +18,15 @@
     "direction": "vertical"
   },
   "left": {
-    "id": "e1f56175b467a425",
+    "id": "ce8ab08c9fed5690",
     "type": "split",
     "children": [
       {
-        "id": "3db7d6cbba24066f",
+        "id": "62747b67b9cb4070",
         "type": "tabs",
         "children": [
           {
-            "id": "889051a61bbec7ac",
+            "id": "18a5255bfdd51a11",
             "type": "leaf",
             "state": {
               "type": "file-explorer",
@@ -34,7 +34,7 @@
             }
           },
           {
-            "id": "1cae23c8da56d8e7",
+            "id": "cd686a9a0653a67c",
             "type": "leaf",
             "state": {
               "type": "search",
@@ -55,20 +55,20 @@
     "width": 300
   },
   "right": {
-    "id": "e0272d310a0a000a",
+    "id": "b7317ddee0fb056a",
     "type": "split",
     "children": [
       {
-        "id": "6d3d0b89c1e677ad",
+        "id": "f6e15fc59ca585e8",
         "type": "tabs",
         "children": [
           {
-            "id": "9ee07f7fb5542516",
+            "id": "d455260f4d90d104",
             "type": "leaf",
             "state": {
               "type": "backlink",
               "state": {
-                "file": "In Progress/Relevant.md",
+                "file": "relevant.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,17 +86,8 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "aa0e8e0ef7e3b865",
+  "active": "9249eac710ee11dd",
   "lastOpenFiles": [
-    "In Progress/Relevant.md",
-    "In Progress/ScriptKiddie.md",
-    "In Progress/Kotarak.md",
-    "In Progress/Grandpa.md",
-    "In Progress/Granny.md",
-    "In Progress/Solidstate.md",
-    "Arctic.md",
-    "In Progress/Bastard.md",
-    "In Progress/Breadcrumbs.md",
-    "In Progress/Nineveh.md"
+    "relevant.md"
   ]
 }
