--- a/docs/TryHackMe/.obsidian/workspace
+++ b/docs/TryHackMe/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Vulnversity.md",
-            "mode": "source"
+            "file": "In Process/relevant.md",
+            "mode": "preview"
           }
         }
       }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Vulnversity.md",
+                "file": "In Process/relevant.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "9249eac710ee11dd",
   "lastOpenFiles": [
+    "In Process/relevant.md",
+    "Skynet.md",
+    "internal.md",
+    "hackpark.md",
+    "In Process/Daily Bugle.md",
     "Vulnversity.md",
     "tomghost.md",
     "steelmountain.md",
-    "Skynet.md",
-    "relevant.md",
     "overpass2hacked.md",
-    "Mr Robot.md",
-    "internal.md",
-    "hackpark.md",
-    "Alfred.md"
+    "Mr Robot.md"
   ]
 }
