--- a/docs/HackTheBox/.obsidian/workspace
+++ b/docs/HackTheBox/.obsidian/workspace
@@ -7,11 +7,8 @@
         "id": "aa0e8e0ef7e3b865",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "In Progress/Relevant.md",
-            "mode": "source"
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -68,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "In Progress/Relevant.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
