--- a/docs/HackTheBox/.obsidian/workspace
+++ b/docs/HackTheBox/.obsidian/workspace
@@ -4,12 +4,35 @@
     "type": "split",
     "children": [
       {
-        "id": "aa0e8e0ef7e3b865",
-        "type": "leaf",
-        "state": {
-          "type": "empty",
-          "state": {}
-        }
+        "id": "a2aa18c8246d8223",
+        "type": "split",
+        "children": [
+          {
+            "id": "9a0e92dfd02a291b",
+            "type": "leaf",
+            "state": {
+              "type": "markdown",
+              "state": {
+                "file": "In Progress/Kotarak.md",
+                "mode": "preview"
+              }
+            },
+            "group": "f03708bea3ffc2a9"
+          },
+          {
+            "id": "aa0e8e0ef7e3b865",
+            "type": "leaf",
+            "state": {
+              "type": "markdown",
+              "state": {
+                "file": "In Progress/Kotarak.md",
+                "mode": "source"
+              }
+            },
+            "group": "f03708bea3ffc2a9"
+          }
+        ],
+        "direction": "horizontal"
       }
     ],
     "direction": "vertical"
@@ -49,7 +72,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
   "right": {
     "id": "e0272d310a0a000a",
@@ -65,6 +89,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "In Progress/Kotarak.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -82,11 +107,11 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "aa0e8e0ef7e3b865",
+  "active": "9a0e92dfd02a291b",
   "lastOpenFiles": [
+    "In Progress/Kotarak.md",
     "In Progress/Relevant.md",
     "In Progress/ScriptKiddie.md",
-    "In Progress/Kotarak.md",
     "In Progress/Grandpa.md",
     "In Progress/Granny.md",
     "In Progress/Solidstate.md",
