--- a/docs/OSCP practice exam/.obsidian/workspace
+++ b/docs/OSCP practice exam/.obsidian/workspace
@@ -1,52 +1,32 @@
 {
   "main": {
-    "id": "97bfe9ffc0c0a5e1",
+    "id": "c5d4016ca85a2b36",
     "type": "split",
     "children": [
       {
-        "id": "a2aa18c8246d8223",
-        "type": "split",
-        "children": [
-          {
-            "id": "9a0e92dfd02a291b",
-            "type": "leaf",
-            "state": {
-              "type": "markdown",
-              "state": {
-                "file": "In Progress/Kotarak.md",
-                "mode": "preview"
-              }
-            },
-            "group": "f03708bea3ffc2a9"
-          },
-          {
-            "id": "aa0e8e0ef7e3b865",
-            "type": "leaf",
-            "state": {
-              "type": "markdown",
-              "state": {
-                "file": "In Progress/Kotarak.md",
-                "mode": "source"
-              }
-            },
-            "group": "f03708bea3ffc2a9"
+        "id": "8bc7cb5545c5e59f",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "0. Intro.md",
+            "mode": "source"
           }
-        ],
-        "direction": "horizontal"
+        }
       }
     ],
     "direction": "vertical"
   },
   "left": {
-    "id": "e1f56175b467a425",
+    "id": "567fbebce1ed6ad0",
     "type": "split",
     "children": [
       {
-        "id": "3db7d6cbba24066f",
+        "id": "ef32734c2573e9d4",
         "type": "tabs",
         "children": [
           {
-            "id": "889051a61bbec7ac",
+            "id": "393068d90f3ee7a0",
             "type": "leaf",
             "state": {
               "type": "file-explorer",
@@ -54,7 +34,7 @@
             }
           },
           {
-            "id": "1cae23c8da56d8e7",
+            "id": "129e3b730e71d528",
             "type": "leaf",
             "state": {
               "type": "search",
@@ -75,20 +55,20 @@
     "width": 300
   },
   "right": {
-    "id": "e0272d310a0a000a",
+    "id": "f5260bcf2ee34d81",
     "type": "split",
     "children": [
       {
-        "id": "6d3d0b89c1e677ad",
+        "id": "603225115b4c42ba",
         "type": "tabs",
         "children": [
           {
-            "id": "9ee07f7fb5542516",
+            "id": "72ad0f8825d784c4",
             "type": "leaf",
             "state": {
               "type": "backlink",
               "state": {
-                "file": "In Progress/Kotarak.md",
+                "file": "0. Intro.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -106,17 +86,11 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "9a0e92dfd02a291b",
+  "active": "8bc7cb5545c5e59f",
   "lastOpenFiles": [
-    "In Progress/Kotarak.md",
-    "In Progress/Relevant.md",
-    "In Progress/ScriptKiddie.md",
-    "In Progress/Grandpa.md",
-    "In Progress/Granny.md",
-    "In Progress/Solidstate.md",
-    "Arctic.md",
-    "In Progress/Bastard.md",
-    "In Progress/Breadcrumbs.md",
-    "In Progress/Nineveh.md"
+    "0. Intro.md",
+    "Untitled.md",
+    "2. 10.10.10.74.md",
+    "1. 10.10.10.182.md"
   ]
 }
