--- a/docs/OSCP practice exam/.obsidian/workspace
+++ b/docs/OSCP practice exam/.obsidian/workspace
@@ -90,6 +90,7 @@
   "lastOpenFiles": [
     "0. Intro.md",
     "3. 10.10.10.13.md",
+    "Pasted image 20220203075427.png",
     "2. 10.10.10.74.md",
     "1. 10.10.10.182.md",
     "Untitled.md"
