--- a/docs/OSCP practice exam/.obsidian/workspace
+++ b/docs/OSCP practice exam/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "3. 10.10.10.13.md",
+            "file": "4. Forest.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "3. 10.10.10.13.md",
+                "file": "4. Forest.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,11 +88,12 @@
   },
   "active": "8bc7cb5545c5e59f",
   "lastOpenFiles": [
-    "3. 10.10.10.13.md",
+    "4. Forest.md",
+    "5. Sauna.md",
+    "3. Cronos.md",
+    "2. Chatterbox.md",
+    "1. Cascade.md",
     "0. Intro.md",
-    "Pasted image 20220203075427.png",
-    "2. 10.10.10.74.md",
-    "1. 10.10.10.182.md",
-    "Untitled.md"
+    "Pasted image 20220203075427.png"
   ]
 }
