--- a/docs/OSCP practice exam/.obsidian/workspace
+++ b/docs/OSCP practice exam/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "6. Sense.md",
+            "file": "0. Intro.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "6. Sense.md",
+                "file": "0. Intro.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,9 +88,9 @@
   },
   "active": "8bc7cb5545c5e59f",
   "lastOpenFiles": [
+    "0. Intro.md",
     "6. Sense.md",
     "5. Sauna.md",
-    "0. Intro.md",
     "4. Forest.md",
     "3. Cronos.md",
     "2. Chatterbox.md",
