--- a/docs/TryHackMe/.obsidian/workspace
+++ b/docs/TryHackMe/.obsidian/workspace
@@ -10,9 +10,22 @@
           "type": "markdown",
           "state": {
             "file": "In Process/relevant.md",
+            "mode": "source"
+          }
+        },
+        "group": "be921e3e13617e4b"
+      },
+      {
+        "id": "9881e179670ccbd0",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "In Process/relevant.md",
             "mode": "preview"
           }
-        }
+        },
+        "group": "be921e3e13617e4b"
       }
     ],
     "direction": "vertical"
@@ -52,7 +65,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 331
+    "width": 331,
+    "collapsed": true
   },
   "right": {
     "id": "b7317ddee0fb056a",
@@ -86,17 +100,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "9249eac710ee11dd",
+  "active": "9881e179670ccbd0",
   "lastOpenFiles": [
     "In Process/relevant.md",
+    "hackpark.md",
+    "Alfred.md",
     "Skynet.md",
     "internal.md",
-    "hackpark.md",
     "In Process/Daily Bugle.md",
     "Vulnversity.md",
     "tomghost.md",
     "steelmountain.md",
-    "overpass2hacked.md",
-    "Mr Robot.md"
+    "overpass2hacked.md"
   ]
 }
