--- a/docs/TryHackMe/.obsidian/workspace
+++ b/docs/TryHackMe/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "In Process/relevant.md",
+            "file": "internal.md",
             "mode": "source"
           }
         },
@@ -21,7 +21,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "In Process/relevant.md",
+            "file": "internal.md",
             "mode": "preview"
           }
         },
@@ -82,7 +82,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "In Process/relevant.md",
+                "file": "internal.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -100,13 +100,13 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "9881e179670ccbd0",
+  "active": "9249eac710ee11dd",
   "lastOpenFiles": [
+    "internal.md",
     "In Process/relevant.md",
     "hackpark.md",
     "Alfred.md",
     "Skynet.md",
-    "internal.md",
     "In Process/Daily Bugle.md",
     "Vulnversity.md",
     "tomghost.md",
