--- a/docs/TryHackMe/.obsidian/workspace
+++ b/docs/TryHackMe/.obsidian/workspace
@@ -9,23 +9,10 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "internal.md",
+            "file": "In Process/BufferOverFlowPrep.md",
             "mode": "source"
           }
-        },
-        "group": "be921e3e13617e4b"
-      },
-      {
-        "id": "9881e179670ccbd0",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "internal.md",
-            "mode": "preview"
-          }
-        },
-        "group": "be921e3e13617e4b"
+        }
       }
     ],
     "direction": "vertical"
@@ -82,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "internal.md",
+                "file": "In Process/BufferOverFlowPrep.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -102,6 +89,7 @@
   },
   "active": "9249eac710ee11dd",
   "lastOpenFiles": [
+    "In Process/BufferOverFlowPrep.md",
     "internal.md",
     "Alfred.md",
     "In Process/relevant.md",
@@ -110,7 +98,6 @@
     "In Process/Daily Bugle.md",
     "Vulnversity.md",
     "tomghost.md",
-    "steelmountain.md",
-    "overpass2hacked.md"
+    "steelmountain.md"
   ]
 }
