--- a/docs/TryHackMe/.obsidian/workspace
+++ b/docs/TryHackMe/.obsidian/workspace
@@ -12,7 +12,20 @@
             "file": "Brainstorm.md",
             "mode": "source"
           }
-        }
+        },
+        "group": "47037fd90e09337a"
+      },
+      {
+        "id": "edb50520b0aa2cc8",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "Brainstorm.md",
+            "mode": "preview"
+          }
+        },
+        "group": "47037fd90e09337a"
       }
     ],
     "direction": "vertical"
